--- a/example-usage.ipynb
+++ b/example-usage.ipynb
@@ -285,7 +285,7 @@
    "source": [
     "- again, if you don't need a particular session and just want to loop over all\n",
     "available sessions, an iterator is provided which queries session-tracking\n",
-    "databases and return `DynamicRoutingSession` instances (most-recent first)\n",
+    "databases and returns `DynamicRoutingSession` instances (most-recent first)\n",
     "- see the function docstring for more info about usage: https://github.com/AllenInstitute/npc_sessions/blob/f92e226ab0922b4919b9442dc63594de572ecb78/src/npc_sessions/sessions.py#L49"
    ]
   },
