--- a/example-usage.ipynb
+++ b/example-usage.ipynb
@@ -246,7 +246,7 @@
     "- `npc_sessions.utils` contains functions for processing raw data files from a session (sync file, hdf5 stim files, OpenEphys files, etc.)\n",
     "- one big class is devoted to pulling together all of the processed components and metadata, and converting to NWB format\n",
     "    - as above, we pass a session ID (labtracks mouse ID and date) or a path\n",
-    "    - importing the package is currenlty slow\n",
+    "    - importing the package is currently slow\n",
     "    - initialization of the object should always be fast (data is processed on-demand)"
    ]
   },
@@ -285,7 +285,7 @@
    "source": [
     "- again, if you don't need a particular session and just want to loop over all\n",
     "available sessions, an iterator is provided which queries session-tracking\n",
-    "databases and returns `DynamicRoutingSession` instances (most-recent first)\n",
+    "databases and return `DynamicRoutingSession` instances (most-recent first)\n",
     "- see the function docstring for more info about usage: https://github.com/AllenInstitute/npc_sessions/blob/f92e226ab0922b4919b9442dc63594de572ecb78/src/npc_sessions/sessions.py#L49"
    ]
   },
@@ -306,8 +306,6 @@
     }
    ],
    "source": [
-    "import npc_sessions\n",
-    " \n",
     "next(npc_sessions.get_sessions())"
    ]
   },
